// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamVerificationContainer renders nothing when nothing's playing 1`] = `<DocumentFragment />`;

exports[`StreamVerificationContainer renders the current status when there's a track in the queue 1`] = `
<DocumentFragment>
  <div
    class="stream_verification"
  >
    <div
      class="stream_verification_right"
    >
      <div
        class="stream_status_icon unknown"
      >
        <i
          aria-hidden="true"
          class="check circle icon"
        />
      </div>
      <div
        class="stream_status"
      >
        Unknown
      </div>
    </div>
    <button
      class="ui button nuclear button"
    >
      Verify
    </button>
  </div>
</DocumentFragment>
`;

exports[`StreamVerificationContainer shows the track as verified by user if the user has verified it 1`] = `
<DocumentFragment>
  <div
    class="stream_verification"
  >
    <div
      class="stream_verification_right"
    >
      <div
        class="stream_status_icon verified_by_user"
      >
        <i
          aria-hidden="true"
          class="check circle icon"
        />
      </div>
      <div
        class="stream_status"
      >
        Verified by you
      </div>
    </div>
    <button
      class="ui button nuclear button"
    >
      Unverify
    </button>
  </div>
</DocumentFragment>
`;

exports[`StreamVerificationContainer shows the track as verified if there are many verifications 1`] = `
<DocumentFragment>
  <div
    class="stream_verification"
  >
    <div
      class="stream_verification_right"
    >
      <div
        class="stream_status_icon verified"
      >
        <i
          aria-hidden="true"
          class="check circle icon"
        />
      </div>
      <div
        class="stream_status"
      >
        Verified
      </div>
    </div>
    <button
      class="ui button nuclear button"
    >
      Verify
    </button>
  </div>
</DocumentFragment>
`;

exports[`StreamVerificationContainer shows the track as weakly verified if there are few verifications 1`] = `
<DocumentFragment>
  <div
    class="stream_verification"
  >
    <div
      class="stream_verification_right"
    >
      <div
        class="stream_status_icon weakly_verified"
      >
        <i
          aria-hidden="true"
          class="check circle icon"
        />
      </div>
      <div
        class="stream_status"
      >
        Weakly verified
      </div>
    </div>
    <button
      class="ui button nuclear button"
    >
      Verify
    </button>
  </div>
</DocumentFragment>
`;
